# rustc_alias

./: Cargo.toml  README.md
src/: alias.rs  analysis.rs  main.rs  optimisation.rs
src/analysis/: immutability_span.rs  top_of_borrow_stack.rs
tests/: compiletest.rs  utils.rs
tests/mir-opt/: move_up_mut.rs
tests/ui/: immutability_span.stdout  immutability_span_tuple_assignment.stdout  move_up.rs  move_up.stdout  move_up_mut.rs  move_up_mut.stdout  move_up_mut_no_opt.rs  move_up_mut_no_opt.stdout  move_up_mut_no_opt2.rs  move_up_mut_no_opt2.stdout  move_up_mut_no_opt3.rs  move_up_mut_no_opt3.stdout
tests/ui/eliminate_reads/: eliminate_reads.rs  eliminate_reads.stdout  move_local.rs  move_past_shared_borrow.rs  move_past_shared_borrow.stdout  repeat_write.rs
tests/ui/eliminate_reads/copy_types/: custom_tuple.rs  custom_tuple.stdout  custom_types.rs  custom_types.stdout  enum.rs  enum.stdout  option.rs  option.stdout  partial_access.rs  partial_access.stdout  shared_reference.rs  shared_reference.stdout  tuple.rs  tuple.stdout
tests/ui/eliminate_reads/no_opt/: call_return.rs  cast_to_pointer.rs  cast_to_pointer.stdout  interior_mutability.stdout  loop_with_borrow_in_body.rs  loop_with_borrow_in_body.stdout  mem_replace.rs  reborrow.rs  (+1 more)
tests/ui/move_up_mut/: immutability_span.rs  immutability_span.stdout  immutability_span_tuple_assignment.rs  immutability_span_tuple_assignment.stdout  move_local.stdout  move_past_shared_borrow.rs  move_past_shared_borrow.stdout  move_up_mut.stdout  regain_of_top_of_stack.rs  regain_of_top_of_stack.stdout  repeat_write.stdout
(+20 files in other folders)
