[package]
name = "rustc_alias"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4", features = ["release_max_level_info"] }
env_logger = "0.9"

[package.metadata.rust-analyzer]
# This crate uses #[feature(rustc_private)]
rustc_private = true

[dev-dependencies]
compiletest_rs = "0.7"